Bug 45809 - SVGFETurbulenceElement doesn't support dynamic invalidation
Summary: SVGFETurbulenceElement doesn't support dynamic invalidation
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 45453
  Show dependency treegraph
 
Reported: 2010-09-15 00:43 PDT by Renata Hodovan
Modified: 2010-09-15 03:46 PDT (History)
5 users (show)

See Also:


Attachments
Patch for feTurbulence properties (1.89 MB, patch)
2010-09-15 01:10 PDT, Renata Hodovan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Renata Hodovan 2010-09-15 00:43:12 PDT
SVGFETurbulenceElement doesn't support dynamic invalidation
Comment 1 Renata Hodovan 2010-09-15 01:10:46 PDT
Created attachment 67652 [details]
Patch for feTurbulence properties
Comment 2 Dirk Schulze 2010-09-15 01:30:55 PDT
Comment on attachment 67652 [details]
Patch for feTurbulence properties

LGTM. r=me.
Comment 3 WebKit Commit Bot 2010-09-15 02:16:10 PDT
Comment on attachment 67652 [details]
Patch for feTurbulence properties

Clearing flags on attachment: 67652

Committed r67544: <http://trac.webkit.org/changeset/67544>
Comment 4 WebKit Commit Bot 2010-09-15 02:16:17 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 WebKit Review Bot 2010-09-15 03:46:57 PDT
http://trac.webkit.org/changeset/67544 might have broken GTK Linux 32-bit Debug
The following changes are on the blame list:
http://trac.webkit.org/changeset/67544
http://trac.webkit.org/changeset/67542
http://trac.webkit.org/changeset/67543